Closed Bug 387178 Opened 18 years ago Closed 18 years ago

Fix nsFolderCharsetObserver leak

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mscott, Assigned: mscott)

Details

(Keywords: memory-leak)

Attachments

(1 file)

Startup thunderbird, then quit. We end up leaking nsFolderCharsetObserver. I noticed this while looking through the leak log while tracking down the dom window leak. Easy fix coming up.
Attached patch the fix Splinter Review
release the global ref when the folder observer is notified that xpcom is shutting down. The old code leaked because by the time we set gReleaseObserver, nsDBFolderInfo::ReleaseExternalReferences had been called on all dbfolder info objects.
Assignee: nobody → mscott
Status: NEW → ASSIGNED
Attachment #271286 - Flags: superreview?(bienvenu)
Comment on attachment 271286 [details] [diff] [review] the fix maybe nsnull instead of NULL, for purely aesthetic reasons :-)
Attachment #271286 - Flags: superreview?(bienvenu) → superreview+
OS: Windows Vista → All
Hardware: PC → All
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Keywords: mlk
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: