Bug #387178 --> nsFolderCharsetObserver is getting leaked on shut down.

sr=bienvenu